update portfolio project

--- a/index.html
+++ b/index.html
@@ -1,155 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3XRDPJ6WKG"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-3XRDPJ6WKG"
+    ></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-    gtag('config', 'G-3XRDPJ6WKG');
+      gtag("config", "G-3XRDPJ6WKG");
     </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Primary Meta Tags -->
     <title>Marjan Stojanovski - Front End Developer</title>
-    <meta name="title" content="Front-End Developer">
-    <meta name="description" content="Hello, i'm Marjan - ront End Developer">
+    <meta name="title" content="Front-End Developer" />
+    <meta name="description" content="Hello, i'm Marjan - ront End Developer" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://marjanstojanovski.com/">
-    <meta property="og:title" content="Hello,i'm Marjan - Front-End Developer">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="https://marjanstojanovski.com/img/screenshot.png">
-    
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/normalize.css">
-</head>
-<body class="dark-mode">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://marjanstojanovski.com/" />
+    <meta
+      property="og:title"
+      content="Hello,i'm Marjan - Front-End Developer"
+    />
+    <meta property="og:description" content="" />
+    <meta
+      property="og:image"
+      content="https://marjanstojanovski.com/img/screenshot.png"
+    />
+
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+  </head>
+  <body class="dark-mode">
     <div id="header">
-        <a href="index.html">Marjan S.</a>
-        <ul id="myNav" class="nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#about">About Me</a></li>
-            <li><a href="index.html#portfolio">My Portfolio</a></li>
-        </ul>
-        <div class="custom-control custom-switch">
-            <input type="checkbox" class="custom-control-input" id="darkSwitch" />
-            <label class="custom-control-label" for="darkSwitch"></label>
-        </div>
+      <a href="index.html">Marjan S.</a>
+      <ul id="myNav" class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html#about">About Me</a></li>
+        <li><a href="index.html#portfolio">My Portfolio</a></li>
+      </ul>
+      <div class="custom-control custom-switch">
+        <input type="checkbox" class="custom-control-input" id="darkSwitch" />
+        <label class="custom-control-label" for="darkSwitch"></label>
+      </div>
     </div>
     <div class="wrapper">
-        <div id="main">
-            <div id="particles-js"></div>
-            <div class="main-content">
-                <h1>Hello,i'm Marjan<br><span>Front-End Developer</span></h1>
-                <div class="social">
-                    <a class="social-text">links</a>
-                    <div class="line"></div>
-                    <a href="https://github.com/maci-kb24" target="_blank"><i class="fab fa-github fa-sm"></i></a>
-                    <a href="https://codepen.io/maci-kb24/" target="_blank"><i class="fab fa-codepen fa-sm"></i></a>
-                    <a href="https://www.linkedin.com/in/marjan-stojanovski/" target="_blank"><i class="fab fa-linkedin fa-sm"></i></a>
-                </div>
-            </div>  
+      <div id="main">
+        <div id="particles-js"></div>
+        <div class="main-content">
+          <h1>Hello,i'm Marjan<br /><span>Front-End Developer</span></h1>
+          <div class="social">
+            <a class="social-text">links</a>
+            <div class="line"></div>
+            <a href="https://github.com/maci-kb24" target="_blank"
+              ><i class="fab fa-github fa-sm"></i
+            ></a>
+            <a href="https://codepen.io/maci-kb24/" target="_blank"
+              ><i class="fab fa-codepen fa-sm"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/marjan-stojanovski/"
+              target="_blank"
+              ><i class="fab fa-linkedin fa-sm"></i
+            ></a>
+          </div>
         </div>
-        <div id="about">
-            <div class="about-me">
-                <h1><span>About</span>Me</h1>
-                <hr>
-                <p>After discovering my passion for web development, I couldn’t get enough. I made websites for friends and family, interned with a local business, and hired myself out as a freelancer. I’m looking forward to bringing that passion to a full-time role. </p>
-                <div class="resume">
-                    <a href="Marjan Stojanovski Resume.pdf" target="_blank" class="resume-btn">RESUME<i class="fas fa-file-download" style="position:relative; left:17px; bottom:14px; font-size:12px;"></i></a>
-                </div>
-                <h2 class="technologies">Technologies</h2>
-                <div class="logos">
-                    <div class="html"><figure><img src="img/html.png"></figure></div>
-                    <div class="css"><figure><img src="img/css.png"></figure></div>
-                    <div class="javascript"><figure><img src="img/javascript.png"></figure></div>
-                    <!-- <div class="jquery"><figure><img src="img/jquery.jpg"></figure></div> -->
-                    <div class="sass"><figure><img src="img/sass.png"></figure></div>
-                    <div class="webpack"><figure><img src="img/webpack.png"></figure></div>
-                </div>
+      </div>
+      <div id="about">
+        <div class="about-me">
+          <h1><span>About</span>Me</h1>
+          <hr />
+          <p>
+            After discovering my passion for web development, I couldn’t get
+            enough. I made websites for friends and family, interned with a
+            local business, and hired myself out as a freelancer. I’m looking
+            forward to bringing that passion to a full-time role.
+          </p>
+          <div class="resume">
+            <a
+              href="Marjan Stojanovski Resume.pdf"
+              target="_blank"
+              class="resume-btn"
+              >RESUME<i
+                class="fas fa-file-download"
+                style="
+                  position: relative;
+                  left: 17px;
+                  bottom: 14px;
+                  font-size: 12px;
+                "
+              ></i
+            ></a>
+          </div>
+          <h2 class="technologies">Technologies</h2>
+          <div class="logos">
+            <div class="html">
+              <figure><img src="img/html.png" /></figure>
             </div>
+            <div class="css">
+              <figure><img src="img/css.png" /></figure>
+            </div>
+            <div class="javascript">
+              <figure><img src="img/javascript.png" /></figure>
+            </div>
+            <!-- <div class="jquery"><figure><img src="img/jquery.jpg"></figure></div> -->
+            <div class="sass">
+              <figure><img src="img/sass.png" /></figure>
+            </div>
+            <div class="webpack">
+              <figure><img src="img/webpack.png" /></figure>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
     <div id="portfolio">
-        <div class="portfolio-heading">
-            <h1><span>My</span> Portfolio</h1>
+      <div class="portfolio-heading">
+        <h1><span>My</span> Portfolio</h1>
+      </div>
+      <div class="portfolio-grid">
+        <div class="tabellarius portfolio-item">
+          <a href="https://tabellarius.org" target="_blank">
+            <img src="img/tabellarius-min.png" class="image" />
+            <div class="title">
+              <p class="text">Tabellarius - <br />HTML,CSS,Worpdress</p>
+            </div>
+          </a>
         </div>
-        <div class="portfolio-grid">
-            <div class="tabellarius">
-                <a href="https://tabellarius.org" target="_blank">
-                <img src="img/tabellarius-min.png" class="image">
-                <div class="title">
-                    <p class="text">Tabellarius<br>HTML,CSS,Worpdress</p>
-                </div>
-                </a>
+        <div class="architecture portfolio-item">
+          <a href="https://architecture-landing.netlify.app/" target="_blank">
+            <img src="img/Architecture.webp" class="image" />
+            <div class="title">
+              <a
+                href="https://github.com/maci-kb24/architecture_landing"
+                target="_blank"
+                style="
+                  background-color: white;
+                  color: black;
+                  padding: 5px 10px;
+                  border: none;
+                  border-radius: 3px;
+                "
+                >Github</a
+              >
+              <p class="text">
+                Architecture LP - <br />HTML, SCSS, Javascript, Splide(
+                Typescript carousel library)
+              </p>
             </div>
-            <div class="breaking-bad">
-                <a href="https://breakind-bad.netlify.app/" target="_blank">
-                    <img src="img/breaking_bad_vector_by_akyanym.jpg" class="image">
-                    <div class="title">
-                        <p class="text">Breaking Bad Characters<br>HTML,CSS,Javascript</p>
-                    </div>
-                </a>
-            </div>
-            <div class="momentum">
-                <a href="https://momentum-landing-page.netlify.app/" target="_blank">
-                    <img src="img/momentum.png" class="image">
-                    <div class="title">
-                        <p class="text">Momentum<br>HTML 5,CSS 3,Bootstrap 5</p>
-                    </div>
-                </a>
-            </div>
-            <div class="usatechreport">
-                <a href="https://usatechreport.com" target="_blank">
-                    <img src="img/marketing-min.jpg" class="image">
-                    <div class="title">
-                        <p class="text">USA Tech Report<br>HTML,CSS,Wordpress</p>
-                    </div>
-                </a>
-            </div>
-            <!-- <div class="njlawyers">
-                <a href="https://njlawyers.com.au" target="_blank">
-                    <img src="img/njlawyers.jpg" class="image">
-                    <div class="title">
-                        <p class="text">NJ Lawyers<br>HTML,CSS,Wordpress</p>
-                    </div>
-                </a>
-            </div> -->
-            <!-- <div class="rock-paper-scissors">
-                <a href="https://maci-kb24.github.io/rock-paper-scissors/" target="_blank">
-                    <img src="img/rock_paper_scissors.png" class="image">
-                    <div class="title">
-                        <p class="text">Rock Paper Scissors<br>HTML,CSS,Javascript</p>
-                    </div>
-                </a>
-            </div> -->
+          </a>
         </div>
+        <div class="momentum portfolio-item">
+          <a href="https://momentum-landing-page.netlify.app/" target="_blank">
+            <img src="img/momentum.png" class="image" />
+            <div class="title">
+              <a
+                href="https://github.com/maci-kb24/Momentum"
+                target="_blank"
+                style="
+                  background-color: white;
+                  color: black;
+                  padding: 5px 10px;
+                  border: none;
+                  border-radius: 3px;
+                "
+                >Github</a
+              >
+              <p class="text">Momentum - <br />HTML, CSS, Bootstrap 5</p>
+            </div>
+          </a>
+        </div>
+        <div class="saas-landing portfolio-item">
+          <a
+            href="https://saas-landing-page-tailwind.netlify.app/"
+            target="_blank"
+          >
+            <img src="img/saas-landing.webp" class="image" />
+            <div class="title">
+              <a
+                href="https://github.com/maci-kb24/saas-landing"
+                target="_blank"
+                style="
+                  background-color: white;
+                  color: black;
+                  padding: 5px 10px;
+                  border: none;
+                  border-radius: 3px;
+                "
+                >Github</a
+              >
+              <p class="text">GroundDesk - <br />HTML, CSS, JS, Tailwind</p>
+            </div>
+          </a>
+        </div>
+      </div>
     </div>
     <div id="footer">
-        <div class="footer-info">
-            <h2>Location</h2>
-            <p>Skopje, Macedonia</p>
-        </div>
-        <div class="footer-social">
-            <a href="https://www.linkedin.com/in/marjan-stojanovski/" target="_blank"><i class="fab fa-linkedin fa-1x"></i></a>
-            <a href="https://github.com/maci-kb24" target="_blank"><i class="fab fa-github fa-1x"></i></a>
-            <a href="https://codepen.io/maci-kb24/" target="_blank"><i class="fab fa-codepen fa-1x"></i></a>
-        </div>
-        <div class="footer-email">
-            <h2>Get In Touch</h2>
-            <p>+389 77 747 210</p>
-            <p>macikb8@yahoo.com</p>
-        </div>
+      <div class="footer-info">
+        <h2>Location</h2>
+        <p>Skopje, Macedonia</p>
+      </div>
+      <div class="footer-social">
+        <a
+          href="https://www.linkedin.com/in/marjan-stojanovski/"
+          target="_blank"
+          ><i class="fab fa-linkedin fa-1x"></i
+        ></a>
+        <a href="https://github.com/maci-kb24" target="_blank"
+          ><i class="fab fa-github fa-1x"></i
+        ></a>
+        <a href="https://codepen.io/maci-kb24/" target="_blank"
+          ><i class="fab fa-codepen fa-1x"></i
+        ></a>
+      </div>
+      <div class="footer-email">
+        <h2>Get In Touch</h2>
+        <p>+389 77 747 210</p>
+        <p>macikb8@yahoo.com</p>
+      </div>
     </div>
-    <script src="js/index.js"></script>
     <script src="js/particles.js"></script>
     <script src="js/app.js"></script>
     <script src="https://kit.fontawesome.com/a6c9863b77.js"></script>
     <script src="js/dark-mode-switch.js"></script>
-</body>
+  </body>
 </html>
