fix toggle dark mode button pointer

--- a/index.html
+++ b/index.html
@@ -54,25 +54,32 @@
     </div>
     <div class="wrapper">
       <div id="main">
-        <div id="particles-js"></div>
         <div class="main-content">
           <h1>Hello,i'm Marjan<br /><span>Front-End Developer</span></h1>
           <div class="social">
-            <a class="social-text">links</a>
+            <p class="social-text">Links</p>
             <div class="line"></div>
-            <a href="https://github.com/maci-kb24" target="_blank"
+            <a
+              title="Github"
+              href="https://github.com/maci-kb24"
+              target="_blank"
               ><i class="fab fa-github fa-sm"></i
             ></a>
-            <a href="https://codepen.io/maci-kb24/" target="_blank"
+            <a
+              title="Codepen"
+              href="https://codepen.io/maci-kb24/"
+              target="_blank"
               ><i class="fab fa-codepen fa-sm"></i
             ></a>
             <a
+              title="Linkeding"
               href="https://www.linkedin.com/in/marjan-stojanovski/"
               target="_blank"
               ><i class="fab fa-linkedin fa-sm"></i
             ></a>
           </div>
         </div>
+        <div id="particles-js"></div>
       </div>
       <div id="about">
         <div class="about-me">
