--- a/index.html
+++ b/index.html
@@ -159,18 +159,18 @@
                 >Github</a
               >
               <p class="text">
-                Architecture LP - <br />HTML, SCSS, Javascript, Splide(
-                Typescript carousel library)
+                Architecture - <br />HTML, SCSS, Javascript, Splide( Typescript
+                carousel library)
               </p>
             </div>
           </a>
         </div>
-        <div class="momentum portfolio-item">
-          <a href="https://momentum-landing-page.netlify.app/" target="_blank">
-            <img src="img/momentum.png" class="image" />
+        <div class="figma-land portfolio-item">
+          <a href="https://figma-land-startup.netlify.app/" target="_blank">
+            <img src="img/Figma_startup.webp" class="image" />
             <div class="title">
               <a
-                href="https://github.com/maci-kb24/Momentum"
+                href="https://github.com/maci-kb24/Figma_land"
                 target="_blank"
                 style="
                   background-color: white;
@@ -181,7 +181,7 @@
                 "
                 >Github</a
               >
-              <p class="text">Momentum - <br />HTML, CSS, Bootstrap 5</p>
+              <p class="text">Figma Land - <br />HTML, SCSS, Bootstrap 5</p>
             </div>
           </a>
         </div>
