add technologies logos

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </div>
     <div class="wrapper">
       <div id="main">
+        <div id="particles-js"></div>
         <div class="main-content">
           <h1>Hello,i'm Marjan<br /><span>Front-End Developer</span></h1>
           <div class="social">
@@ -79,7 +80,6 @@
             ></a>
           </div>
         </div>
-        <div id="particles-js"></div>
       </div>
       <div id="about">
         <div class="about-me">
@@ -122,8 +122,20 @@
             <div class="sass">
               <figure><img src="img/sass.png" /></figure>
             </div>
-            <div class="webpack">
-              <figure><img src="img/webpack.png" /></figure>
+            <div class="bootstrap">
+              <figure><img src="img/bootstrap.png" /></figure>
+            </div>
+            <div class="vite">
+              <figure><img src="img/vite.png" /></figure>
+            </div>
+            <div class="vue">
+              <figure><img src="img/vue.png" /></figure>
+            </div>
+            <div class="vuetify">
+              <figure><img src="img/vuetify.png" /></figure>
+            </div>
+            <div class="tailwind">
+              <figure><img src="img/tailwind.png" /></figure>
             </div>
           </div>
         </div>
