created portoflio item

--- a/index.html
+++ b/index.html
@@ -146,11 +146,28 @@
         <h1><span>My</span> Portfolio</h1>
       </div>
       <div class="portfolio-grid">
-        <div class="tabellarius portfolio-item">
-          <a href="https://tabellarius.org" target="_blank">
-            <img src="img/tabellarius-min.png" class="image" />
+        <div class="fitness-calc portfolio-item">
+          <a
+            href="https://fitness-tdee-calculator.netlify.app/"
+            target="_blank"
+          >
+            <img src="img/fitness-calc-app.png" class="image" />
             <div class="title">
-              <p class="text">Tabellarius - <br />HTML,CSS,Worpdress</p>
+              <a
+                href="https://github.com/maci-kb24/fitness_calculator_api"
+                target="_blank"
+                style="
+                  background-color: white;
+                  color: black;
+                  padding: 5px 10px;
+                  border: none;
+                  border-radius: 3px;
+                "
+                >Github</a
+              >
+              <p class="text">
+                Fitness Calculator - <br />HTML, CSS, Javascript, API
+              </p>
             </div>
           </a>
         </div>
@@ -217,6 +234,26 @@
                 >Github</a
               >
               <p class="text">GroundDesk - <br />HTML, CSS, JS, Tailwind</p>
+            </div>
+          </a>
+        </div>
+        <div class="juve-app portfolio-item">
+          <a href="https://juve-web-app.netlify.app/" target="_blank">
+            <img src="img/juveapp.png" class="image" />
+            <div class="title">
+              <a
+                href="https://github.com/maci-kb24/juve-vue-app"
+                target="_blank"
+                style="
+                  background-color: white;
+                  color: black;
+                  padding: 5px 10px;
+                  border: none;
+                  border-radius: 3px;
+                "
+                >Github</a
+              >
+              <p class="text">Juventus Web App - <br />Vue 3, Vuetify 3</p>
             </div>
           </a>
         </div>
