--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </p>
           <div class="resume">
             <a
-              href="Marjan Stojanovski Resume.pdf"
+              href="MarjanStojanovskiResume.pdf"
               target="_blank"
               class="resume-btn"
               >RESUME<i
