fix the portfolio items

--- a/index.html
+++ b/index.html
@@ -147,115 +147,112 @@
       </div>
       <div class="portfolio-grid">
         <div class="fitness-calc portfolio-item">
-          <a
-            href="https://fitness-tdee-calculator.netlify.app/"
-            target="_blank"
-          >
-            <img src="img/fitness-calc-app.png" class="image" />
-            <div class="title">
-              <a
-                href="https://github.com/maci-kb24/fitness_calculator_api"
-                target="_blank"
-                style="
-                  background-color: white;
-                  color: black;
-                  padding: 5px 10px;
-                  border: none;
-                  border-radius: 3px;
-                "
-                >Github</a
-              >
-              <p class="text">
-                Fitness Calculator - <br />HTML, CSS, Javascript, API
-              </p>
-            </div>
-          </a>
+          <img src="img/fitness-calc-app.png" class="image" />
+          <div class="title">
+            <p class="text">
+              BMI Calculator using Fitness API, calculate BMI,body fat,calories
+              etc. - <br />Javascript, API
+            </p>
+          </div>
+          <div class="links">
+            <a
+              href="https://github.com/maci-kb24/fitness_calculator_api"
+              target="_blank"
+              style="
+                background-color: white;
+                color: black;
+                padding: 5px 10px;
+                border: none;
+                border-radius: 3px;
+              "
+              >Github</a
+            >
+            <a
+              href="https://fitness-tdee-calculator.netlify.app/"
+              target="_blank"
+              style="
+                background-color: white;
+                color: black;
+                padding: 5px 10px;
+                border: none;
+                border-radius: 3px;
+              "
+            >
+              Live site</a
+            >
+          </div>
         </div>
         <div class="architecture portfolio-item">
-          <a href="https://architecture-landing.netlify.app/" target="_blank">
-            <img src="img/Architecture.webp" class="image" />
-            <div class="title">
-              <a
-                href="https://github.com/maci-kb24/architecture_landing"
-                target="_blank"
-                style="
-                  background-color: white;
-                  color: black;
-                  padding: 5px 10px;
-                  border: none;
-                  border-radius: 3px;
-                "
-                >Github</a
-              >
-              <p class="text">
-                Architecture - <br />HTML, SCSS, Javascript, Splide( Typescript
-                carousel library)
-              </p>
-            </div>
-          </a>
-        </div>
-        <div class="figma-land portfolio-item">
-          <a href="https://figma-land-startup.netlify.app/" target="_blank">
-            <img src="img/Figma_startup.webp" class="image" />
-            <div class="title">
-              <a
-                href="https://github.com/maci-kb24/Figma_land"
-                target="_blank"
-                style="
-                  background-color: white;
-                  color: black;
-                  padding: 5px 10px;
-                  border: none;
-                  border-radius: 3px;
-                "
-                >Github</a
-              >
-              <p class="text">Figma Land - <br />HTML, SCSS, Bootstrap 5</p>
-            </div>
-          </a>
-        </div>
-        <div class="saas-landing portfolio-item">
-          <a
-            href="https://saas-landing-page-tailwind.netlify.app/"
-            target="_blank"
-          >
-            <img src="img/saas-landing.webp" class="image" />
-            <div class="title">
-              <a
-                href="https://github.com/maci-kb24/saas-landing"
-                target="_blank"
-                style="
-                  background-color: white;
-                  color: black;
-                  padding: 5px 10px;
-                  border: none;
-                  border-radius: 3px;
-                "
-                >Github</a
-              >
-              <p class="text">GroundDesk - <br />HTML, CSS, JS, Tailwind</p>
-            </div>
-          </a>
+          <img src="img/Architecture.webp" class="image" />
+          <div class="title">
+            <p class="text">
+              Architecture landing page - <br />Javascript, Splide( Typescript
+              carousel library)
+            </p>
+          </div>
+          <div class="links">
+            <a
+              href="https://github.com/maci-kb24/architecture_landing"
+              target="_blank"
+              style="
+                background-color: white;
+                color: black;
+                padding: 5px 10px;
+                border: none;
+                border-radius: 3px;
+              "
+              >Github</a
+            >
+            <a
+              href="https://architecture-landing.netlify.app/"
+              target="_blank"
+              style="
+                background-color: white;
+                color: black;
+                padding: 5px 10px;
+                border: none;
+                border-radius: 3px;
+              "
+            >
+              Live Site</a
+            >
+          </div>
         </div>
         <div class="juve-app portfolio-item">
-          <a href="https://juve-web-app.netlify.app/" target="_blank">
-            <img src="img/juveapp.png" class="image" />
-            <div class="title">
-              <a
-                href="https://github.com/maci-kb24/juve-vue-app"
-                target="_blank"
-                style="
-                  background-color: white;
-                  color: black;
-                  padding: 5px 10px;
-                  border: none;
-                  border-radius: 3px;
-                "
-                >Github</a
-              >
-              <p class="text">Juventus Web App - <br />Vue 3, Vuetify 3</p>
-            </div>
-          </a>
+          <img src="img/juveapp.png" class="image" />
+          <div class="title">
+            <p class="text">
+              Web App about Juventus, show matches, results,players etc. Soon to
+              functionality to add matches from the site to Firebase, register
+              and login users,authentication - <br />Vue 3, Vuetify 3
+            </p>
+          </div>
+          <div class="links">
+            <a
+              href="https://github.com/maci-kb24/juve-vue-app"
+              target="_blank"
+              style="
+                background-color: white;
+                color: black;
+                padding: 5px 10px;
+                border: none;
+                border-radius: 3px;
+              "
+              >Github</a
+            >
+            <a
+              href="https://juve-web-app.netlify.app/"
+              target="_blank"
+              style="
+                background-color: white;
+                color: black;
+                padding: 5px 10px;
+                border: none;
+                border-radius: 3px;
+              "
+              >Live Site</a
+            >
+          </div>
         </div>
       </div>
     </div>
