add portfolio project

--- a/index.html
+++ b/index.html
@@ -222,9 +222,8 @@
           <img src="img/juveapp.png" class="image" />
           <div class="title">
             <p class="text">
-              Web App about Juventus, show matches, results,players etc. Soon to
-              functionality to add matches from the site to Firebase, register
-              and login users,authentication - <br />Vue 3, Vuetify 3
+              Web App about Juventus, show matches, results,players etc. -
+              <br />Vue 3, Vuetify 3
             </p>
           </div>
           <div class="links">
@@ -242,6 +241,38 @@
             >
             <a
               href="https://juve-web-app.netlify.app/"
+              target="_blank"
+              style="
+                background-color: white;
+                color: black;
+                padding: 5px 10px;
+                border: none;
+                border-radius: 3px;
+              "
+              >Live Site</a
+            >
+          </div>
+        </div>
+        <div class="nike-lp portfolio-item">
+          <img src="img/rsz_nike-lp.png" class="image" />
+          <div class="title">
+            <p class="text">Nike Landing Page - React JS, Tailwind CSS</p>
+          </div>
+          <div class="links">
+            <a
+              href="https://github.com/maci-kb24/nike-landing"
+              target="_blank"
+              style="
+                background-color: white;
+                color: black;
+                padding: 5px 10px;
+                border: none;
+                border-radius: 3px;
+              "
+              >Github</a
+            >
+            <a
+              href="https://nike-lp.netlify.app/"
               target="_blank"
               style="
                 background-color: white;
